# aztec-packages

./: .gitignore  .gitmodules  .test_patterns.yml  CI.md  CODEOWNERS  Makefile  README.md  bootstrap.sh  ci.sh  cspell.json  docker-compose.yml
.github/: release-please-v2.json
avm-transpiler/: Cargo.toml  avm_transpiler.h  bootstrap.sh
aztec-postprocess-contract/: transpile_contract_and_gen_vks.sh
aztec-up/: README.md  bootstrap.sh
barretenberg/bb_rs/: Cargo.toml  build.rs  wrapper.hpp
barretenberg/bb_rs/scripts/: build_bb.sh
barretenberg/bb_rs/src/: lib.rs
barretenberg/bb_rs/src/barretenberg_api/: acir.rs  bbapi.rs  mod.rs  models.rs  srs.rs  utils.rs
barretenberg/bb_rs/src/barretenberg_api/tests/: acir.rs  bbapi.rs  mod.rs
barretenberg/bb_rs/src/barretenberg_api/untested/: aes.rs  blake2s.rs  bn254.rs  ecdsa.rs  grumpkin.rs  mod.rs  pedersen.rs  poseidon2.rs  schnorr.rs  secp256k1.rs  srs.rs
barretenberg/bb_rs/src/noir_api/: api.rs  artifacts.rs  inputs.rs  mod.rs
barretenberg/bb_rs/test_vectors/: hello_world.json
barretenberg/zkuh-rs/: .gitignore  Cargo.toml  build.rs  wrapper.hpp
barretenberg/zkuh-rs/bindings/: bindings.rs
barretenberg/zkuh-rs/libs/: checksums.txt
barretenberg/zkuh-rs/src/barretenberg_api/: acir.rs  mod.rs  models.rs  utils.rs
barretenberg/zkuh-rs/src/barretenberg_api/tests/: acir.rs  bbapi.rs
barretenberg/zkuh-rs/src/noir_api/: inputs.rs  mod.rs
boxes/: bin.js  bootstrap.sh  docker-compose.yml  package.json
build-images/: bootstrap.sh
ci3/: aws_request_instance_type  bootstrap_ec2  cache_exists  cache_log  cache_upload  color_prefix  denoise  deploy_npm  docker_isolate  filter_cached_test_cmd  filter_test_cmds  get_test_entry  get_test_owner  merge_train_failure_slack_notify  os  parallelize  run_test_cmd  source  source_bootstrap  source_cache  source_redis  source_refname
docs/: .gitignore  CLAUDE.md  NIGHTLY_DOCS_PROCESS.md  Nargo.toml  README.md  bootstrap.sh  docs-words.txt  docusaurus.config.js  netlify.toml  package.json  sidebars.js  typedoc.json  typedoc.tsconfig.json  versions.json
l1-contracts/: README.md  bootstrap.sh  foundry.toml
noir/: .rebuild_patterns  bootstrap.sh  noir-repo-ref  noir-repo.patch  precommit.sh
noir-projects/: bootstrap.sh  gates_report.sh  rollup_honk_circuits.json
playground/: README.md  bootstrap.sh  docker-compose.yml  eslint.config.js  index.html  package.json  vite.config.ts
release-image/: Dockerfile  Dockerfile.dockerignore  bootstrap.sh
scripts/: auto_close_issues.py  backport_to_staging.sh  commits  dedupe_release_notes.py  find_orphaned_issues_in_prs.py  post_flake_comment.py  process_flake_log.py  rebase_upstream.sh
spartan/: .gitignore  bootstrap.sh
yarn-project/: .gitignore  (+5 more)
(+5630 files in other folders)
