[package]
name = "zkuh-rs"
version = "1.4.0"
edition = "2021"
authors = ["CjS77"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["prebuild"]
# Uses prebuilt libraries and bindings.rs for linking
prebuild = []
# Build the C++ library from source and generates bindings.rs at build time
buildlib = []

[dependencies]
acir = { version = "1.0.0-beta.15", path = "../../noir/noir-repo/acvm-repo/acir" }
bn254_blackbox_solver = { version = "1.0.0-beta.15", path = "../../noir/noir-repo/acvm-repo/bn254_blackbox_solver" }
noirc_artifacts = { version = "1.0.0-beta.15", path = "../../noir/noir-repo/tooling/noirc_artifacts" }
nargo = { version = "1.0.0-beta.15", path = "../../noir/noir-repo/tooling/nargo" }
nargo_toml = { version = "1.0.0-beta.15", path = "../../noir/noir-repo/tooling/nargo_toml" }
noirc_abi = { version = "1.0.0-beta.15", path = "../../noir/noir-repo/tooling/noirc_abi" }
noirc_driver = { version = "1.0.0-beta.15", path = "../../noir/noir-repo/compiler/noirc_driver" }

flate2 = {version = "1.1"}
num-bigint = "0.4"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = { version = "1.0.145" }
thiserror = "2.0.17"
hex = "0.4.3"
log = "0.4.28"

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.50"
needs_rebuild = {  version = "1.2"}

[dev-dependencies]
env_logger = "0.11.8"
